# Property-Hub

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  AGENTS.md  COMPONENTS.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Makefile  Pipfile  README.md  conftest.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  justfile  package-lock.json  package.json  pyproject.toml  pytest.ini  tailwind.config.js
.github/: pull_request_template.md
.github/workflows/: ci.yml  docker.yml
apps/chat/: admin.py  consumers.py  models.py  selectors.py  services.py  tests.py  urls.py  views.py
apps/chat/migrations/: 0001_initial.py  0002_message.py  0003_alter_conversation_created_at.py
apps/chat/tests/: test_admin.py  test_consumers.py  test_services.py  test_views.py
apps/properties/: admin.py  apps.py  forms.py  mixins.py  models.py  selectors.py  services.py  urls.py  utils.py  validations.py  views.py
apps/properties/components/: __init__.py  delete_modal.py  favorite_button.py  image_carousel.py  property_card.py  property_detail.py  property_form.py  property_list.py
apps/properties/migrations/: 0001_initial.py  0002_auto_update_models.py  0003_rename_properties_property_created_at_idx_properties__created_72ecc3_idx_and_more.py  0004_alter_property_documents.py  0005_property_area_property_bathrooms_property_bedrooms_and_more.py  0006_remove_property_properties__created_72ecc3_idx_and_more.py
apps/properties/templatetags/: form_filters.py
apps/properties/tests/: factories.py  test_components.py  test_e2e_user_flows.py  test_models_extra.py  test_properties.py  test_services.py  test_views.py
apps/shared/: __init__.py  exceptions.py  mixins.py  models.py  services.py  validators.py
apps/shared/components/: __init__.py  alert_message.py  form_field.py  loading_spinner.py  pagination.py
apps/shared/tests/: __init__.py  (+3 more)
apps/users/: adapters.py  admin.py  apps.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
assets/css/: input.css
config/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
config/django/: base.py  local.py  production.py
config/settings/: __init__.py  allauth.py  axes.py  base.py  channels.py  development.py  production.py  storages.py  tailwind_cli.py  unfold.py
docs/: INDEX.md  README.md  django-styleguide-migration-plan.md
docs/adr/: 0001-adopt-hacksoft-styleguide-htmx-adapted.md  0002-services-selectors-forms-as-io.md  0003-customusermanager-framework-hook-exception.md  0004-settings-split-per-integration.md
docs/architecture/: frontend.md  overview.md
docs/deployment/: checklist.md
docs/development/: chat-client-test.html  chat-client-test.js  chat-client.md  frontend-setup.md
docs/guides/: contributing.md
frontend/src/: chat-client.js  chat-client.test.html  chat-client.test.js  input.css
scripts/: localstack-init.sh  localstack-init.sh.sh
static/: base.css
static/js/: chat-client.js
static/properties/: new.css
static/src/: README.md  chat-client.js  input.css
static/users/: login.css
templates/: README.md  base.html  page.html  test_unicorn.html
templates/_layouts/: auth.html  base.html  dashboard.html
templates/chat/: conversation_detail.html
templates/properties/: create.html  detail.html  edit.html  favorites.html  list.html  my-properties.html  myprops.html  new.html
templates/unicorn/: alert-message.html  delete-modal.html  favorite-button.html  form-field.html  image-carousel.html  loading-spinner.html  login-form.html  pagination.html  password-change-form.html  password_input.html  profile-form.html  property-card.html  property-detail.html  property-form.html  property-list.html  signup-form.html
templates/users/: login.html  password_change.html  profile.html  signup.html
(+76 files in other folders)
