[project]
name = "property-hub"
version = "0.1.0"
description = "Django Property Management System"
requires-python = ">=3.13"
dependencies = [
    "bleach",
    "boto3",
    "channels",
    "channels-redis",
    "django",
    "django-axes",
    "django-storages",
    "django-unfold",
    "environs[django]",
    "pillow",
    "psycopg[binary]",
    "unfold",
    "whitenoise",
]

classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3.13",
]

[dependency-groups]
dev = [
    "daphne",
    "django-debug-toolbar",
    "django-extensions",
    "ruff",
    "twisted[http2,tls]",
    "werkzeug",
]
prod = [
    "django-compressor",
    "gunicorn",
    "uvicorn[standard]",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "apps", "templates"]

[tool.ty]
# Disable strict checks for Django ORM patterns
disable = [
    "unresolved-attribute",  # Django models have dynamic attributes
]
