[project]
name = "realm-key"
version = "0.1.0"
description = "Django Property Management System"
requires-python = ">=3.13"
dependencies = [
    "boto3==1.42.55",
    "channels==4.3.2",
    "channels-redis==4.3.0",
    "django==6.0.5",
    "django-allauth==65.18.0",
    "django-axes==8.3.1",
    "django-cotton==2.7.2",
    "django-heroicons>=0.0.8",
    "django-htmx==1.27.0",
    "django-storages==1.14.6",
    "django-tailwind-cli==4.6.2",
    "django-unfold>=0.81.0",
    "django-widget-tweaks==1.5.1",
    "environs[django]==14.6.0",
    "nh3>=0.3.3",
    "pillow==12.2.0",
    "psycopg[binary]==3.3.3",
    "redis[hiredis]>=7.2.0",
    "uvicorn[standard]==0.49.0",
    "whitenoise==6.11.0",
]

classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3.13",
]

[dependency-groups]
dev = [
    "django-debug-toolbar==6.2.0",
    "django-extensions==4.1",
    "factory-boy>=3.3.0",
    "remote-pdb>=2.1.0",
    "ruff==0.15.2",
    "werkzeug==3.1.6",
]
prod = [
    "django-compressor==4.6.0",
    "gunicorn==25.1.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "apps"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "templates"
"assets" = "assets"
"static" = "static"

[tool.ty]
# Disable strict checks for Django ORM patterns
disable = [
    "unresolved-attribute",  # Django models have dynamic attributes
]
